--- a/paper/references.bib
+++ b/paper/references.bib
@@ -246,7 +246,7 @@
   year={2023}
 }
 
-@article{walker1997paradise,
+@article{paradise,
   title={PARADISE: A Framework for Evaluating Spoken Dialogue Agents},
   author={Walker, Marilyn A and Litman, Diane J and Kamm, Candace A and Abella, Alicia},
   journal={arXiv preprint cmp-lg/9704004},
@@ -347,4 +347,23 @@
   author={Guu, Kelvin and Lee, Kenton and Tung, Zora and Pasupat, Panupong and Chang, Ming-Wei},
   journal={arXiv preprint arXiv:2002.08909},
   year={2020}
+}
+
+@article{goal-oriented,
+      title={Recent Advances and Challenges in Task-oriented Dialog System}, 
+      author={Zheng Zhang and Ryuichi Takanobu and Qi Zhu and Minlie Huang and Xiaoyan Zhu},
+      year={2020}
+}
+
+@article{graphrag,
+      title={From Local to Global: A Graph RAG Approach to Query-Focused Summarization}, 
+      author={Darren Edge and Ha Trinh and Newman Cheng and Joshua Bradley and Alex Chao and Apurva Mody and Steven Truitt and Jonathan Larson},
+      year={2024}
+}
+
+@article{text-to-sql,
+  title={Text-to-SQL: State of the Art and Future Directions},
+  author={Liu, Qian and Du, Mengyang and Liu, Xiang and Zhang, Aoying and Wang, Chuan and Wang, Haixu and Li, Zhipeng and Dong, Yuhao and Shen, Siyu and Tang, Yaliang and Zheng, Wenhao},
+  journal={arXiv preprint arXiv:2312.09158},
+  year={2023}
 }
